# Cmake_Learning

./: README.md
demo2/: CMakeLists.txt  main.cpp
demo3/: CMakeLists.txt  demo.cpp
demo3/mylib/: CMakeLists.txt
demo4/: CMakeLists.txt
demo4/mylib/: CMakeLists.txt
demo4/src/: CMakeLists.txt
demo5/: CMakeLists.txt
demo5/mylib/: CMakeLists.txt
demo5/src/: CMakeLists.txt
